Revert "add/git-workflows"
This reverts commit 9c47fb1547f41aa09702cb5913450edf59a42383.

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "type-check": "tsc --noEmit"
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -76,7 +75,4 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
-
-  
-
 }
