--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       - "9000:9000"
       - "9001:9001"
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin123
+      MINIO_ROOT_USER: raketnow
+      MINIO_ROOT_PASSWORD: raketnowadmin_2345
     command: server /data --console-address ":9001"
     volumes:
       - minio_data:/data
