--- a/backend/package.json
+++ b/backend/package.json
@@ -42,7 +42,9 @@
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
@@ -65,6 +67,7 @@
     "@types/oauth": "^0.9.6",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/passport-oauth2": "^1.8.0",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
