--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "minio": "^8.0.5",
     "multer": "^2.0.2",
