--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "seed": "ts-node src/seed/seed-skills.ts"
+    "seed": "ts-node src/seed/seed-skills.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.850.0",
@@ -71,7 +72,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mocha": "^10.0.10",
     "@types/multer": "^1.4.13",
-    "@types/node": "^22.16.5",
+    "@types/node": "^22.17.0",
     "@types/oauth": "^0.9.6",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
