--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ frontend/node_modules
 frontend/dist
 frontend/dist-ssr
 frontend/*.local
+frontend/.env
 
 # Editor directories and files
 .vscode/*
