--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-socket.io": "^11.1.5",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.5",
+    "@sendgrid/mail": "^8.1.5",
     "@types/socket.io": "^3.0.1",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
